--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<title>Pagina mea personala</title>
-	</head>
-	<body>
-		<p>Numele meu este Petrascu Ovidiu Daniel</p>
-		<p>Cainele meu se numeste Rex</p>
-	</body>
+<head>
+	<title>Pagina mea personala</title>
+</head>
+<body>
+	<img src = "dog.jpg" alt = "Poza personala"
+	<p>Numele meu este Petrascu Ovidiu Daniel</p>
+	<p>Cainele meu se numeste Rex</p>
+</body>
 
 </html>
