--- a/Daniel.html
+++ b/Daniel.html
@@ -4,13 +4,19 @@
 <p id="id_x"></p>
 <p id="id_y"></p>
 <p id="id_z"></p>
+
 <p id="id_acc_x"></p>
 <p id="id_acc_y"></p>
 <p id="id_acc_z"></p>
+
 <p id="id_acc_g_x"></p>
 <p id="id_acc_g_y"></p>
 <p id="id_acc_g_z"></p>
-<p>UI version = 2017.11.20.0</p>
+
+<p id="id_rot_x"></p>
+<p id="id_rot_y"></p>
+
+<p>UI version = 2017.11.20.1</p>
 <p id="id_business_version"></p>
 
 <script src=Daniel.js>
