--- a/Tema_proiect2_1.html
+++ b/Tema_proiect2_1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1> 1.Informatii personale</h1>
-		<p> <img src = "poza1.jpg" width = "200" height = "200" </p>
+		<p> <img src = "Poza1.jpg" width = "200" height = "200" </p>
 		<p> Nume si prenume: Petrascu Ovidiu Daniel <br> 
 			Adresa: str. Principala, nr.67, Hapria, jud. Alba <br>
 			E-mail: dani.ovidiu30@gmail.com <br>
