--- a/canvas.html
+++ b/canvas.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
 <body>
+<canvas id="id_canvas" width ="400" hight="400">
 
-<canvas id = "id_canvas" width="400" height="400">
 </canvas>
 
-<p>UI version = 2017.11.20</p>
+<p>UI version = 2017.11.27.0</p>
 <p id="id_business_version"></p>
 
-<script scr=canvas.js>
+<script src=canvas.js>
 </script>
-
 </body>
-
-</html>
+</html> 
