--- a/touch2.html
+++ b/touch2.html
@@ -8,7 +8,7 @@
 <p>UI version = 2017.12.14.0</p>
 <p id="id_business_version"></p>
 
-<script src=touch.js>
+<script src=touch2.js>
 </script>
 </body>
 </html> 
