--- a/gps.html
+++ b/gps.html
@@ -3,6 +3,8 @@
 <body>
 <id="id_lat"></p>
 <id="id_long"></p>
+<id="id_acc"></p>
+<id="id_alt"></p>
 
 <p>UI version = 2017.12.14.0</p>
 <p id="id_business_version"></p>
