--- a/tema4.html
+++ b/tema4.html
@@ -16,10 +16,10 @@
 <p id="id_rot_x"></p>
 <p id="id_rot_y"></p>
 
-<p>UI version = 2017.11.20.1</p>
+<p>UI version = 2018.01.28.1</p>
 <p id="id_business_version"></p>
 
-<script src=Daniel.js>
+<script src=tema4.js>
 </script>
 </body>
 </html> 
