--- a/tema4.html
+++ b/tema4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Curriculum Vitae </title>
+	<title>CV + Laboratorul 4 </title>
 </head>
 <body>
 	<h1> 1.Informatii personale</h1>
