--- a/tema4.html
+++ b/tema4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CV + Laborator 4 </title>
+	<title> CV + Laborator 4 </title>
 </head>
 <body>
 	<h1> 1.Informatii personale</h1>
@@ -55,9 +55,18 @@
 		<p> id="id_business_version"> </p>
 			
 		<p> Pozitia telefonului </p>
+			<p id="id_x"></p>
+			<p id="id_y"></p>
+			<p id="id_z"></p>
+
+			<p id="id_acc_x"></p>
+			<p id="id_acc_y"></p>
+			<p id="id_acc_z"></p>
+
 			<p id="id_acc_g_x"></p>
 			<p id="id_acc_g_y"></p>
 			<p id="id_acc_g_z"></p>
+
 		
 		<p> Inclinatia telefonului </p>
 			<p id="id_rot_x"></p>
