--- a/tema4.html
+++ b/tema4.html
@@ -53,6 +53,14 @@
 		
 		<p> Pozitia telefonului </p>
 		
+			<p id="id_x"></p>
+			<p id="id_y"></p>
+			<p id="id_z"></p>
+			
+			<p id="id_acc_x"></p>
+			<p id="id_acc_y"></p>
+			<p id="id_acc_z"></p>
+			
 			<p id="id_acc_g_x"></p>
 			<p id="id_acc_g_y"></p>
 			<p id="id_acc_g_z"></p>
@@ -62,7 +70,7 @@
 			<p id="id_rot_x"></p>
 			<p id="id_rot_y"></p>
 			
-		<script src=tema4.js> </script>
+		<script src = tema4.js> </script>
 	
 	
 	
