--- a/tema4.html
+++ b/tema4.html
@@ -50,8 +50,9 @@
 		
 	<h1> 4. Laboratorul 4 </h1>
 	<h2> 4.1. Aplicatie telefoane mobile </h2>
-		
-		<p> Pozitia telefonului </p>
+		<p> UI version = 2018.01.24.5 </p>
+		<p  id="id_business_version"> </p>
+		<p>  Pozitia telefonului </p>
 		
 			<p id="id_x"></p>
 			<p id="id_y"></p>
