--- a/tema4.html
+++ b/tema4.html
@@ -50,9 +50,11 @@
 		
 	<h1> 4. Laboratorul 4 </h1>
 	<h2> 4.1. Aplicatie telefoane mobile </h2>
-		
+	
 		<p> UI version = 2018.01.24.5 </p>
 		<p  id="id_business_version"> </p>
+		
+		<p>  Pozitia telefonului </p>
 		
 			<p id="id_x"></p>
 			<p id="id_y"></p>
@@ -65,6 +67,8 @@
 			<p id="id_acc_g_x"></p>
 			<p id="id_acc_g_y"></p>
 			<p id="id_acc_g_z"></p>
+		
+		<p> Inclinatia telefonului </p>
 		
 			<p id="id_rot_x"></p>
 			<p id="id_rot_y"></p>
